--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 300px;
-  height: 400px;
+  width: 600px;
+  height: 800px;
   margin: 50px auto;
 }
 
 #display {
-  font-size: 40px;
-  align-self: center;
+  font-size: 100px;
+  height: 100px;
+  display: inline-block;
 }
 
 .row {
@@ -24,6 +25,13 @@
   justify-content: center;
   flex: 1;
 }
+
+#displayContainer {
+  justify-content: flex-start;
+  align-items: center;
+}
+
+
 
 .row-item { 
   flex: 1;
