--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,12 @@
   margin: 0;
 }
 
+body {
+  background-color: rgb(52, 68, 78);
+}
+
 .container {
-  border: 2px solid black;
+  border: 2px solid rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -15,6 +19,7 @@
   gap: 10px;
   background-color: rgba(0, 0, 0, 0.842);
   border-radius: 20px;
+
 }
 
 #display {
@@ -39,12 +44,14 @@
   background-color: rgb(141, 185, 143);
   margin-bottom: 10px;
   border-radius: 10px;
+  border: 2px solid white;
 }
 
 .row-item { 
   flex: 1;
   font-size: 32px;
   border-radius: 10px;
+  border: 2px solid white;
 }
 
 #delete {
@@ -61,7 +68,7 @@
 }
 
 .number {
-  background-color: #f4f4f4;
+  background-color: #c3c3c3;
 }
 
 .operation {
